Update index.html hidden

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       method="POST" 
       data-netlify="true" 
       netlify-honeypot="bot-field"
-      class="hidden-form">
+      class="hidden">
       
       <input type="text" name="bot-field" style="display:none" />
 
